src/objects/Contract_Non_Rate_Based_License_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Beginning_Period__c</fullName>
        <label>Beginning Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Non Rate Based License Fee</relationshipLabel>
        <relationshipName>Contract_Non_Rate_Based_License_Fee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Due_After_SA__c</fullName>
        <label>Due After SA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ending_Period__c</fullName>
        <label>Ending Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Fee_or_Prepay_Amount__c</fullName>
        <label>License Fee or Prepay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Explination__c</fullName>
        <label>Other/Explination</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_L_Treatment__c</fullName>
        <label>P&amp;L Treatment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Trigger__c</fullName>
        <label>Payment Trigger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recoverable__c</fullName>
        <label>Recoverable if Units are not met?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Non Rate Based License Fee</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Non Rate  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Non Rate Based License Fee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>